VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc6Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [32MB/455.1MB][  7%][===>                                              ][10.67MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][18MB/s]  [112MB/455.1MB][ 24%][============>                                     ][22.4MB/s]  [152MB/455.1MB][ 33%][================>                                 ][25.33MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][27.43MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][29MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][29.33MB/s]  [296MB/455.1MB][ 65%][================================>                 ][29.6MB/s]  [320MB/455.1MB][ 70%][===================================>              ][29.09MB/s]  [336MB/455.1MB][ 73%][====================================>             ][28MB/s]  [352MB/455.1MB][ 77%][======================================>           ][27.08MB/s]  [368MB/455.1MB][ 80%][========================================>         ][26.29MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][25.6MB/s]  [408MB/455.1MB][ 89%][============================================>     ][25.5MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][24.94MB/s]  [440MB/455.1MB][ 96%][================================================> ][24.44MB/s]  [455.1MB/455.1MB][100%][==================================================][25.28MB/s]  [455.1MB/455.1MB][100%][==================================================][25.28MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_126577/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_126577/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
